--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,153 @@
     <a href="#">CLIENTES</a>
   </div>
 </nav>
-<div class="Ayuda">
-  <span>Dejanos ayudarte a contar historias cautivantes</span>
-  <div class="text-box">
-      Atrapa a tu audiencia con contenido diverso, hecho a tu medida. 
-      Cómpartenos tus datos de contacto y nos comunicaremos 
-      contigo y te informaremos del desarrollo de eKontent, nuestra 
-      plataforma de contenidos. 
+<div class="audiencia">
+  <div class="tittle-wrapper">
+    <div class="tittle">
+      Tus audiencias ya saben que existes, pero ¿te aprecian?
+    </div>
+    <div class="tittleWhite">
+      ¡Cuéntales de qué estás hecho y qué te impulsa!
+    </div>
   </div>
-  <button>INICIAR LA EXPERIENCIA</button>
+  <div class="text-box">
+    <div class="tittle-box">
+      Nosotros te ayudamos con los relatos que te permitan ganarte su simpatía.
+    </div>
+    <div class="content-box">
+      Actualmente, la comunicación de las organizaciones con sus audiencias se ha diversificado y sofisticado. Los clientes, los
+      proveedores, los trabajadores, los accionistas e incluso las autoridades no se contentan con datos. Quieren conocer
+      lo que mueve a las organizaciones: sus propósitos, sus valores, lo que les preocupa, lo que creen. Hoy en día esperamos
+      que las organizaciones nos ofrezcan regularmente relatos que nos emocionen y enriquezcan como personas. ¿Estás preparado
+      para el reto de difundir regularmente historias que reflejen el carácter y el ADN de tu organización?
+    </div>
+  </div>
+  <button class="button">
+    <span class="text-button">¿NECESITAS YA ALGÚN CONTENIDO?</span>
+  </button>
+</div>
+<div class="ekontent-provee">
+  <div class="tittle-content">
+    <div class="tittle-p">
+      eKontent está para proveerte de los relatos que necesitas para cautivar a tus audiencias
+    </div>
+  </div>
+  <div class="provee-wrapper">
+    <img src="assets/images/proveedor.svg">
+    <div class="provee-box">
+      <div class="tittle-box">
+        Los datos informan. Los relatos emocionan y humanamente estrechan vínculos
+      </div>
+      <div class="content-box">
+        Estudios revelan que los relatos contados por las marcas pueden llevar el conocimiento de las marcas a 69% y la intención
+        de compra a 51%, sin necesidad de irrumpir con menciones de marca. Una práctica que en el mundo digital está generando
+        ya resistencias y herramientas para neutralizarla.
+      </div>
+    </div>
+  </div>
+</div>
+<div class="ekontent-genera">
+  <div class="tittle-content">
+    <div class="tittle-p">
+      ¡Pero claro! Generar contenidos no es tu negocio. Para eso estamos nosotros. ¡Déjanos ayudarte!
+    </div>
+  </div>
+  <div class="content-genera">
+    <div class="content-left">
+      <img src="assets/images/catalogo.svg">
+      <div class="tittle-content-genera">
+        Catálogo de relatos listos para descargar
+      </div>
+      <div class="content-box-genera">
+        Descarga contenidos en diferentes formatos, listos para que los apliques inmediatamente en tus canales de comunicación
+      </div>
+    </div>
+    <div class="content-right">
+      <img src="assets/images/personalizado.svg">
+      <div class="tittle-content-genera">
+        Contenidos a la medida de tus necesidades
+      </div>
+      <div class="content-box-genera">
+        Una comunidad de creativos está a tu alcance en línea para que te desarrollen los contenidos que requieres de acuerdo a tus
+        especificaciones
+      </div>
+    </div>
+  </div>
+  <div class="button-genera">
+    <button class="button">
+      <span class="text-button">¿QUIERES EMPEZAR?</span>
+    </button>
+  </div>
+</div>
+<div class="ekontent-creativo">
+  <div class="tittle-content">
+    <div class="tittle-p">
+      ¿Eres creativo y quieres poner tu talento al alcance de quienes lo necesitan para contar sus relatos?
+    </div>
+  </div>
+  <div class="content-creativo">
+    <div class="content-left">
+      <img src="assets/images/dinero.svg">
+      <div class="tittle-content-creativo">
+        Gana ingresos extra
+      </div>
+      <div class="content-box-creativo">
+        Realiza contenidos interesantes y emocionantes en los formatos que dominas y ofrécelos en el catálogo, exhibe tu portafolio
+        y muestra lo que eres capaz de producir
+
+      </div>
+    </div>
+    <div class="content-center">
+      <img src="assets/images/comunidad-creativa.svg">
+      <div class="tittle-content-creativo">
+        Comunidad de creativos
+      </div>
+      <div class="content-box-creativo">
+        Participa en una comunidad de creativos, con una plataforma que te facilita y ayuda con tus operaciones
+
+      </div>
+    </div>
+    <div class="content-right">
+      <img src="assets/images/mundo.svg">
+      <div class="tittle-content-creativo">
+        Trabaja donde quieras
+      </div>
+      <div class="content-box-creativo">
+        Accede desde cualquier lugar del mundo y a través de nuestra plataforma contacta clientes interesados en tus talentos y capacidades
+        creativas
+      </div>
+    </div>
+  </div>
+  <div class="button-creativo">
+    <button class="button">
+      <span class="text-button">QUIERO FORMAR PARTE</span>
+    </button>
+  </div>
+</div>
+<div class="ekontent-ineteresa">
+  <div class="tittle-content">
+    <div class="tittle-p">
+      Me interesa invertir en eKontent
+    </div>
+  </div>
+  <div class="content-ineteresa">
+    <div class="content-left">
+      <img src="assets/images/dinero.svg">
+      <div class="content-box-ineteresa">
+        En la competencia las organizaciones más humanas tienen la ventaja
+      </div>
+    </div>
+    <div class="content-right">
+      <img src="assets/images/mundo.svg">
+      <div class="content-box-ineteresa">
+        eKontent representa la oportunidad para los creativos de mejorar sus oportunidades y condiciones
+      </div>
+    </div>
+  </div>
+  <div class="tittle">
+    De los creadores de RED Empresarial
+  </div>
+  <button class="button">
+      <span class="text-button">SABER MÁS</span>
+    </button>
 </div>
