--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,33 @@ nav{
     display: flex;
     justify-content: space-around;
 }
+
+.tittle-wrapper{
+    display: flex;
+    justify-content: space-around;
+}
+
+.tittle{
+    width: 457px;
+    height: 108px;
+    font-family: GothamBold;
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 1.2;
+    text-align: left;
+    color: #373737;
+}
+
+.tittleWhite{
+    width: 304px;
+    height: 92px;
+    font-family: Gotham;
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 1.25;
+    text-align: left;    
+}
+
 .eKontentNav{
     width: 75%;
     display: flex;
@@ -17,4 +44,259 @@ nav{
     text-align: center;
     color: #adadad;
 
+}
+
+.text-box{
+    margin-left: 12.5%;
+}
+
+.tittle-box{
+    width: 274px;
+    height: 40px;
+    font-family: SourceSansPro;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.25;
+    text-align: left;
+    color: #b3a1d1;
+    margin-bottom: 1%;
+}
+
+.content-box{
+    width: 517px;
+    height: 225px;
+    font-family: SourceSansPro;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: left;
+    color: #808080;
+}
+
+.button{
+    margin-left: 12.5%;
+    width: 280px;
+    height: 48px;
+    border-radius: 24px;
+    background-image: linear-gradient(to right, #4ac8d9, #9ea5ff);
+    border: none;
+    box-shadow: none;
+}
+.text-button{
+    font-family: SourceSansPro;
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    color: #ffffff;
+}
+
+.provee-wrapper{
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.provee-wrapper > img{
+    margin-left: 80px;
+}
+
+.ekontent-provee{   
+  width: 100%;
+  height: 470px;
+  background-color: #f7f7f7;
+}
+
+.tittle-content{
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    padding-top: 2.5%;
+    font-size: 24px;
+}
+
+.tittle-p{    
+  width: 730px;
+  font-family: GothamBold;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  color: #373737;
+}
+
+.provee-box{
+    width: 457px;
+    height: 168px;
+    margin-right: 205px;
+    margin-top: 80px;
+}
+
+.provee-box > .tittle-box{
+    width: 304px !important;    
+    margin-bottom: 3%;
+}
+
+.provee-box > .content-box{
+    width: 411px;
+}
+
+
+.ekontent-genera > .tittle-content > .tittle-p{
+    width: 672px;
+}
+
+.content-genera{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 3%;
+}
+
+.tittle-content-genera{
+    width: 240px;
+    height: 36px;
+    font-family: GothamBold;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    color: #373737;
+    margin: 10% 0 10% 0;
+}
+
+.content-box-genera{
+    width: 220px;
+    height: 80px;
+    font-family: SourceSansPro;
+    font-size: 16px;
+    text-align: center;
+    color: #808080;
+}
+
+.content-left{
+    margin-left: 260px;
+    text-align: center;
+}
+
+.content-right{
+    margin-right: 270px;
+    text-align: center;
+}
+
+.button-genera{
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.ekontent-genera > .button-genera > .button{
+    width: 20.6%;
+    margin: 0;
+}
+
+.content-creativo{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 3%;
+}
+
+.tittle-content-creativo{
+    width: 240px;
+    height: 36px;
+    font-family: GothamBold;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    color: #373737;
+    margin: 10% 0 10% 0;
+}
+
+.content-box-creativo{
+    width: 220px;
+    height: 80px;
+    font-family: SourceSansPro;
+    font-size: 16px;
+    text-align: center;
+    color: #808080;
+}
+
+
+.button-creativo{
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.ekontent-creativo > .button-creativo > .button{
+    width: 20.6%;
+    margin: 0;
+}
+
+.ekontent-creativo > .content-creativo > .content-left{
+    margin: 0;
+    text-align: center;
+}
+.ekontent-creativo > .content-creativo > .content-center{
+    margin: 0;
+    text-align: center;
+}
+.ekontent-creativo > .content-creativo > .content-right{
+    margin: 0;
+    text-align: center;
+}
+
+.content-ineteresa{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 3%;
+}
+
+.tittle-content-ineteresa{
+    width: 240px;
+    height: 36px;
+    font-family: GothamBold;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    color: #373737;
+    margin: 10% 0 10% 0;
+}
+
+.content-box-ineteresa{
+    width: 220px;
+    height: 80px;
+    font-family: SourceSansPro;
+    font-size: 16px;
+    text-align: center;
+    color: #808080;
+}
+
+.button-ineteresa{
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.ekontent-ineteresa > .button-ineteresa > .button{
+    width: 20.6%;
+    margin: 0;
+}
+
+.ekontent-ineteresa > .content-ineteresa > .content-left{
+    margin: 0;
+    text-align: center;
+}
+
+.ekontent-ineteresa > .content-ineteresa > .content-right{
+    margin: 0;
+    text-align: center;
+}
+
+.ekontent-ineteresa > .content-ineteresa > .content-left > .content-box-ineteresa{
+    margin-top: 3%;
+}
+
+.ekontent-ineteresa > .content-ineteresa > .content-right > .content-box-ineteresa{
+    margin-top: 3%;
+}
+
+.ekontent-ineteresa > .tittle{
+    width: 1360px;
 }
