--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,158 +1,302 @@
 <nav>
-  <img src="assets/images/logotipo.svg">
+  <img class="logo" src="assets/images/logotipo.svg">
   <div class="eKontentNav">
     <a href="#">NOSOTROS</a>
-    <a href="#">CREADORES</a>
     <a href="#">CLIENTES</a>
+    <a href="#">CREADORES</a>
+    <a href="#">INVERSIONISTAS</a>
   </div>
 </nav>
-<div class="audiencia">
-  <div class="tittle-wrapper">
-    <div class="tittle">
+<div class="desktop">
+  <div class="audiencia">
+    <div class="fondo-audiencia">
+      <div class="audiencia-left">
+        <div class="tittle">
+          Tus audiencias ya saben que existes, pero ¿te aprecian?
+        </div>
+        <hr class="under-tittle-audiencia">
+        <br>
+        <br>
+        <div class="text-box">
+          <div class="tittle-box">
+            Nosotros te ayudamos con los relatos que te permitan ganarte su simpatía.
+          </div>
+          <div class="content-box">
+            Actualmente, la comunicación de las organizaciones con sus audiencias se ha diversificado y sofisticado. Los clientes, los
+            proveedores, los trabajadores, los accionistas e incluso las autoridades no se contentan con datos. Quieren conocer
+            lo que mueve a las organizaciones: sus propósitos, sus valores, lo que les preocupa, lo que creen. Hoy en día
+            esperamos que las organizaciones nos ofrezcan regularmente relatos que nos emocionen y enriquezcan como personas.
+            ¿Estás preparado para el reto de difundir regularmente historias que reflejen el carácter y el ADN de tu organización?
+          </div>
+        </div>
+        <button mat-button class="button">
+          <span class="text-button">¿NECESITAS YA ALGÚN CONTENIDO?</span>
+        </button>
+      </div>
+      <div class="audiencia-right">
+        <div class="tittleWhite">
+          ¡Cuéntales de qué estás hecho y qué te impulsa!
+        </div>
+      </div>
+    </div>
+    <div class="tittle-content-p">
+      <div class="tittle-p">
+        eKontent está para proveerte de los relatos que necesitas para cautivar a tus audiencias
+      </div>
+    </div>
+  </div>
+  <div class="ekontent-provee">
+    <div class="provee-wrapper">
+      <img src="assets/images/proveedor.svg">
+      <div class="provee-box">
+        <div class="tittle-box">
+          Los datos informan. Los relatos emocionan y humanamente estrechan vínculos
+        </div>
+        <div class="content-box">
+          Estudios revelan que los relatos contados por las marcas pueden llevar el conocimiento de las marcas a 69% y la intención
+          de compra a 51%, sin necesidad de irrumpir con menciones de marca. Una práctica que en el mundo digital está generando
+          ya resistencias y herramientas para neutralizarla.
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="ekontent-genera">
+    <div class="tittle-content">
+      <div class="tittle-p">
+        ¡Pero claro! Generar contenidos no es tu negocio. Para eso estamos nosotros. ¡Déjanos ayudarte!
+      </div>
+    </div>
+    <div class="content-genera">
+      <div class="content-left">
+        <img src="assets/images/catalogo.svg">
+        <div class="tittle-content-genera">
+          Catálogo de relatos listos para descargar
+        </div>
+        <div class="content-box-genera">
+          Descarga contenidos en diferentes formatos, listos para que los apliques inmediatamente en tus canales de comunicación
+        </div>
+      </div>
+      <div class="content-right">
+        <img src="assets/images/personalizado.svg">
+        <div class="tittle-content-genera">
+          Contenidos a la medida de tus necesidades
+        </div>
+        <div class="content-box-genera">
+          Una comunidad de creativos está a tu alcance en línea para que te desarrollen los contenidos que requieres de acuerdo a tus
+          especificaciones
+        </div>
+      </div>
+    </div>
+    <div mat-button class="button-genera">
+      <button mat-button class="button">
+        <span class="text-button">¿QUIERES EMPEZAR?</span>
+      </button>
+    </div>
+  </div>
+  <div class="ekontent-contenido">
+    <div class="contenido-wrapper">
+      <div class="tittle-contenido">
+        Contenido listo para descargar
+      </div>
+      <hr class="under-tittle-contenido">
+      <br>
+      <br>
+      <div class="content-contenido">
+        Descárgalo ahora y úsalo en tus canales de comunicación.
+      </div>
+    </div>
+    <div class="slides">
+      <ngx-slick class="ekontent-description-carousel" #slickModal="slick-modal" [config]="slideConfig">
+        <div ngxSlickItem *ngFor="let description of content" class="ekontent-description-slide">
+          <div class="ekontent-description-image" [style.background-image]="'url(' + description.image + ')'"></div>
+          <div class="slide-description">{{description.description}}</div>
+          <div class="footer-slide">
+            <div class="slide-by">Por:
+              <span class="author">{{description.author}}</span>
+            </div>
+            <div>{{description.type}}</div>
+          </div>
+        </div>
+      </ngx-slick>
+    </div>
+  </div>
+  <div class="ekontent-creativo">
+    <div class="tittle-content">
+      <div class="tittle-p">
+        ¿Eres creativo y quieres poner tu talento al alcance de quienes lo necesitan para contar sus relatos?
+      </div>
+    </div>
+    <div class="content-creativo">
+      <div class="content-left">
+        <img src="assets/images/dinero.svg">
+        <div class="tittle-content-creativo">
+          Gana ingresos extra
+        </div>
+        <div class="content-box-creativo">
+          Realiza contenidos interesantes y emocionantes en los formatos que dominas y ofrécelos en el catálogo, exhibe tu portafolio
+          y muestra lo que eres capaz de producir
+        </div>
+      </div>
+      <div class="content-center">
+        <img src="assets/images/comunidad-creativa.svg">
+        <div class="tittle-content-creativo">
+          Comunidad de creativos
+        </div>
+        <div class="content-box-creativo">
+          Participa en una comunidad de creativos, con una plataforma que te facilita y ayuda con tus operaciones
+        </div>
+      </div>
+      <div class="content-right">
+        <img src="assets/images/mundo.svg">
+        <div class="tittle-content-creativo">
+          Trabaja donde quieras
+        </div>
+        <div class="content-box-creativo">
+          Accede desde cualquier lugar del mundo y a través de nuestra plataforma contacta clientes interesados en tus talentos y capacidades
+          creativas
+        </div>
+      </div>
+    </div>
+    <div class="button-creativo">
+      <button mat-button class="button">
+        <span class="text-button">QUIERO FORMAR PARTE</span>
+      </button>
+    </div>
+  </div>
+  <div class="ekontent-ineteresa">
+    <div class="tittle-content">
+      <div class="tittle-p">
+        Me interesa invertir en eKontent
+      </div>
+    </div>
+    <div class="content-ineteresa">
+      <div class="content-left">
+        <img src="assets/images/organizaciones-peque-o.svg">
+        <div class="content-box-ineteresa">
+          En la competencia las organizaciones más humanas tienen la ventaja
+        </div>
+      </div>
+      <div class="content-right">
+        <img src="assets/images/oportunidades.svg">
+        <div class="content-box-ineteresa">
+          eKontent representa la oportunidad para los creativos de mejorar sus oportunidades y condiciones
+        </div>
+      </div>
+    </div>
+    <div class="ineteresa-footer">
+      <div>
+        <div class="tittle titulo-creadores">
+          De los creadores de RED Empresarial
+        </div>
+        <hr class="under-tittle">
+      </div>
+      <button mat-button class="button">
+        <span class="text-button">SABER MÁS</span>
+      </button>
+    </div>
+  </div>
+</div>
+<div class="mobile">
+  <div class="mobile-cuentales">
+    <div class="mobile-fondo-cuentales">
+      <div class="texto-white-cuentales">
+        ¡Cuéntales de qué estás hecho y qué te impulsa!
+      </div>
+    </div>
+    <div class="mobile-titulo-audiencias">
       Tus audiencias ya saben que existes, pero ¿te aprecian?
     </div>
-    <div class="tittleWhite">
-      ¡Cuéntales de qué estás hecho y qué te impulsa!
-    </div>
-  </div>
-  <div class="text-box">
-    <div class="tittle-box">
+    <hr class="hr-mobile">
+    <div class="tittle-content">
       Nosotros te ayudamos con los relatos que te permitan ganarte su simpatía.
     </div>
-    <div class="content-box">
+    <div class="text-content">
       Actualmente, la comunicación de las organizaciones con sus audiencias se ha diversificado y sofisticado. Los clientes, los
-      proveedores, los trabajadores, los accionistas e incluso las autoridades no se contentan con datos. Quieren conocer
-      lo que mueve a las organizaciones: sus propósitos, sus valores, lo que les preocupa, lo que creen. Hoy en día esperamos
-      que las organizaciones nos ofrezcan regularmente relatos que nos emocionen y enriquezcan como personas. ¿Estás preparado
-      para el reto de difundir regularmente historias que reflejen el carácter y el ADN de tu organización?
+      proveedores, los trabajad…
+      <a href="#">Ver más</a>
     </div>
+    <button mat-button class="button-mobile">
+      <span class="text-button">¿NECESITAS YA ALGÚN CONTENIDO?</span>
+    </button>
   </div>
-  <button class="button">
-    <span class="text-button">¿NECESITAS YA ALGÚN CONTENIDO?</span>
-  </button>
-</div>
-<div class="ekontent-provee">
-  <div class="tittle-content">
-    <div class="tittle-p">
+  <div class="ekontent-provee-mobile">
+    <div class="ekontent-titulo-mobile">
       eKontent está para proveerte de los relatos que necesitas para cautivar a tus audiencias
     </div>
-  </div>
-  <div class="provee-wrapper">
-    <img src="assets/images/proveedor.svg">
-    <div class="provee-box">
-      <div class="tittle-box">
-        Los datos informan. Los relatos emocionan y humanamente estrechan vínculos
-      </div>
-      <div class="content-box">
-        Estudios revelan que los relatos contados por las marcas pueden llevar el conocimiento de las marcas a 69% y la intención
-        de compra a 51%, sin necesidad de irrumpir con menciones de marca. Una práctica que en el mundo digital está generando
-        ya resistencias y herramientas para neutralizarla.
-      </div>
+    <img class="img-mobile" src="assets/images/proveedor.svg">
+    <div class="tittle-content">
+      Los datos informan. Los relatos emocionan y humanamente estrechan vínculos
+    </div>
+    <div class="text-content">
+      Estudios revelan que los relatos contados por las marcas pueden llevar el conocimiento de las marcas a 69% y la intención
+      de compra a 51%, sin necesidad…
+      <a href="#">Ver más</a>
     </div>
   </div>
-</div>
-<div class="ekontent-genera">
-  <div class="tittle-content">
-    <div class="tittle-p">
+  <div class="generar-mobile">
+    <div class="ekontent-titulo-mobile">
       ¡Pero claro! Generar contenidos no es tu negocio. Para eso estamos nosotros. ¡Déjanos ayudarte!
     </div>
-  </div>
-  <div class="content-genera">
-    <div class="content-left">
-      <img src="assets/images/catalogo.svg">
-      <div class="tittle-content-genera">
-        Catálogo de relatos listos para descargar
-      </div>
-      <div class="content-box-genera">
-        Descarga contenidos en diferentes formatos, listos para que los apliques inmediatamente en tus canales de comunicación
-      </div>
+    <img src="assets/images/catalogo.svg">
+    <div class="tittle-content-genera">
+      Catálogo de relatos listos para descargar
     </div>
-    <div class="content-right">
-      <img src="assets/images/personalizado.svg">
-      <div class="tittle-content-genera">
-        Contenidos a la medida de tus necesidades
-      </div>
-      <div class="content-box-genera">
-        Una comunidad de creativos está a tu alcance en línea para que te desarrollen los contenidos que requieres de acuerdo a tus
-        especificaciones
-      </div>
+    <div class="content-box-genera">
+      Descarga contenidos en diferentes formatos, listos para que los apliques inmediatamente en tus canales de comunicación
+    </div>
+    <img src="assets/images/personalizado.svg">
+    <div class="tittle-content-genera">
+      Contenidos a la medida de tus necesidades
+    </div>
+    <div class="content-box-genera">
+      Una comunidad de creativos está a tu alcance en línea para que te desarrollen los contenidos que requieres de acuerdo a tus
+      especificaciones
     </div>
   </div>
-  <div class="button-genera">
-    <button class="button">
-      <span class="text-button">¿QUIERES EMPEZAR?</span>
-    </button>
-  </div>
-</div>
-<div class="ekontent-creativo">
-  <div class="tittle-content">
-    <div class="tittle-p">
-      ¿Eres creativo y quieres poner tu talento al alcance de quienes lo necesitan para contar sus relatos?
-    </div>
-  </div>
-  <div class="content-creativo">
-    <div class="content-left">
-      <img src="assets/images/dinero.svg">
-      <div class="tittle-content-creativo">
-        Gana ingresos extra
-      </div>
-      <div class="content-box-creativo">
-        Realiza contenidos interesantes y emocionantes en los formatos que dominas y ofrécelos en el catálogo, exhibe tu portafolio
-        y muestra lo que eres capaz de producir
 
-      </div>
-    </div>
-    <div class="content-center">
-      <img src="assets/images/comunidad-creativa.svg">
-      <div class="tittle-content-creativo">
-        Comunidad de creativos
-      </div>
-      <div class="content-box-creativo">
-        Participa en una comunidad de creativos, con una plataforma que te facilita y ayuda con tus operaciones
+  <div class="creativo-mobile">
+      <div class="ekontent-titulo-mobile">
+          ¿Eres creativo y quieres poner tu talento al alcance de quienes lo necesitan para contar sus relatos?
+        </div>
+        <img src="assets/images/catalogo.svg">
+        <div class="tittle-content-genera">
+          Catálogo de relatos listos para descargar
+        </div>
+        <div class="content-box-genera">
+          Descarga contenidos en diferentes formatos, listos para que los apliques inmediatamente en tus canales de comunicación
+        </div>
+        <img src="assets/images/personalizado.svg">
+        <div class="tittle-content-genera">
+          Contenidos a la medida de tus necesidades
+        </div>
+        <div class="content-box-genera">
+          Una comunidad de creativos está a tu alcance en línea para que te desarrollen los contenidos que requieres de acuerdo a tus
+          especificaciones
+        </div>
+  </div>
+</div>
 
-      </div>
+<footer>
+  <div class="footer-wrapper">
+    <div class="ekontent-social">
+      <img src="assets/images/facebook.svg">
+      <img class="imagen-centro" src="assets/images/twitter.svg">
+      <img src="assets/images/linkedin.svg">
     </div>
-    <div class="content-right">
-      <img src="assets/images/mundo.svg">
-      <div class="tittle-content-creativo">
-        Trabaja donde quieras
-      </div>
-      <div class="content-box-creativo">
-        Accede desde cualquier lugar del mundo y a través de nuestra plataforma contacta clientes interesados en tus talentos y capacidades
-        creativas
-      </div>
-    </div>
-  </div>
-  <div class="button-creativo">
-    <button class="button">
-      <span class="text-button">QUIERO FORMAR PARTE</span>
-    </button>
-  </div>
-</div>
-<div class="ekontent-ineteresa">
-  <div class="tittle-content">
-    <div class="tittle-p">
-      Me interesa invertir en eKontent
+    <hr>
+    <div class="contacto">
+      <p>
+        Teléfono: 55 55 55 55
+      </p>
+      <p>
+        E-mail: contacto@ekontent.store
+      </p>
+      <p class="creadores">
+        De los creadores de RED Empresarial
+      </p>
+      <p class="derechos">
+        © 2017 Ekontent - Todos los derechos reservados.
+      </p>
     </div>
   </div>
-  <div class="content-ineteresa">
-    <div class="content-left">
-      <img src="assets/images/dinero.svg">
-      <div class="content-box-ineteresa">
-        En la competencia las organizaciones más humanas tienen la ventaja
-      </div>
-    </div>
-    <div class="content-right">
-      <img src="assets/images/mundo.svg">
-      <div class="content-box-ineteresa">
-        eKontent representa la oportunidad para los creativos de mejorar sus oportunidades y condiciones
-      </div>
-    </div>
-  </div>
-  <div class="tittle">
-    De los creadores de RED Empresarial
-  </div>
-  <button class="button">
-      <span class="text-button">SABER MÁS</span>
-    </button>
-</div>
+</footer>
